added album endpoint
